# de-practice

./: .gitignore  CHANGELOG.md  README.md  cliff.toml
.cargo/: config.toml
data-ingest/: data-ingest.py  requirements.txt
data-ingest-rs/: .gitignore  Cargo.toml
data-ingest-rs/.cargo/: config.toml
data-ingest-rs/src/: main.rs
data-ingest-rs/src/extensions/: mod.rs  string_extension.rs
data-ingest-rs/src/models/: cli_model.rs  data_type_model.rs  mod.rs
data-ingest-rs/src/util/: cli.rs  download_file.rs  mod.rs
data-ingest-rs/src/utils/: download_file.rs  file_opt.rs  mod.rs
data-ingest/scripts/: check-requirements-txt.sh
